results/SVCOMP/conversational/log-uninitialised1-2024_03_17_23_59_14.txt
class Main {
  //@ ensures \result ==> (\forall int i; 0 <= i && i < 10; i[i] == 0);
  public static boolean f() {
    int i[] = new int[10];
    return i[3] == 0;
  }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: array required, but int found
  //@ ensures \result ==> (\forall int i; 0 <= i && i < 10; i[i] == 0);
                                                            ^
1 error

class Main {
  //@ ensures \result ==> (\forall int i; 0 <= i && i < 10; i[i] == 0);
  public static boolean f() {
    int[] i = new int[10];
    return i[3] == 0;
  }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: array required, but int found
  //@ ensures \result ==> (\forall int i; 0 <= i && i < 10; i[i] == 0);
                                                            ^
1 error

class Main {
  //@ ensures \result ==> (\forall int i; 0 <= i && i < 10; i[i] == 0);
  public static boolean f() {
    int[] i = new int[10];
    return i[3] == 0;
  }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: array required, but int found
  //@ ensures \result ==> (\forall int i; 0 <= i && i < 10; i[i] == 0);
                                                            ^
1 error

class Main {
  //@ ensures \result ==> (\forall int i; 0 <= i && i < 10; i[i] == 0);
  public static boolean f() {
    int[] i = new int[10];
    return i[3] == 0;
  }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: array required, but int found
  //@ ensures \result ==> (\forall int i; 0 <= i && i < 10; i[i] == 0);
                                                            ^
1 error

class Main {
  //@ ensures \result ==> (\forall int i; 0 <= i && i < 10; i[i] == 0);
  public static boolean f() {
    int[] i = new int[10];
    return i[3] == 0;
  }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: array required, but int found
  //@ ensures \result ==> (\forall int i; 0 <= i && i < 10; i[i] == 0);
                                                            ^
1 error

class Main {
  //@ ensures \result ==> (\forall int i; 0 <= i && i < 10; i[i] == 0);
  public static boolean f() {
    int[] i = new int[10];
    return i[3] == 0;
  }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: array required, but int found
  //@ ensures \result ==> (\forall int i; 0 <= i && i < 10; i[i] == 0);
                                                            ^
1 error

class Main {
  //@ ensures \result ==> (\forall int i; 0 <= i && i < 10; i[i] == 0);
  public static boolean f() {
    int[] i = new int[10];
    return i[3] == 0;
  }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: array required, but int found
  //@ ensures \result ==> (\forall int i; 0 <= i && i < 10; i[i] == 0);
                                                            ^
1 error

class Main {
  //@ ensures \result ==> (\forall int i; 0 <= i && i < 10; i[i] == 0);
  public static boolean f() {
    int[] i = new int[10];
    return i[3] == 0;
  }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: array required, but int found
  //@ ensures \result ==> (\forall int i; 0 <= i && i < 10; i[i] == 0);
                                                            ^
1 error

class Main {
  //@ ensures \result ==> (\forall int i; 0 <= i && i < 10; i[i] == 0);
  public static boolean f() {
    int[] i = new int[10];
    return i[3] == 0;
  }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: array required, but int found
  //@ ensures \result ==> (\forall int i; 0 <= i && i < 10; i[i] == 0);
                                                            ^
1 error

class Main {
  //@ ensures \result ==> (\forall int i; 0 <= i && i < 10; i[i] == 0);
  public static boolean f() {
    int[] i = new int[10];
    return i[3] == 0;
  }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: array required, but int found
  //@ ensures \result ==> (\forall int i; 0 <= i && i < 10; i[i] == 0);
                                                            ^
1 error

